# Numix

./: .replit  BenPoop69  LICENSE  README.md  config.json  discord.py  index.py  info.py  install-python.cmd  intialize.py  main.py  numix_banking.py  numix_encrypt.py  numix_imports.py  numix_log.py  numix_raid.py  oauth.py  permission_handler.py  profanity.txt  pyproject.toml  requirements.txt  route.py  test.nothing  validation.py  webserver.py
Numix/: config.json  launcher.py  numix.py  numix_encrypt.py  numix_log.py  numix_raid.py  requirements.txt  validation.py
Numix/cogs/: Fun.py  Moderation.py  anti-nuker.py  autorole.py  chatbot.py  config.py  debug.py  economy.py  filter.py  guild_events.py  image.py  interactions.py  logs.py  music.py
RedSafe (Python)/: badwords.txt  config.json  index.py  logs.json  prefix.json  prefixes.json  rslogsetting.json  rspremium.json  suggestcha.json  suggestset.json  swearfilterboi.json  verify.json
RedSafe (Python)/cogs/: admin.py  config.py  discord.py  eval.py  events.py  filter.py  fun.py  help.py  info.py  load.py  mod.py  music.py  workspace.code-workspace
cogs/: ADS_Plugin.py  API_Images.py  Fun.py  Logs & Eval.rar  Moderation.py  anti-nuker.py  app.py  april.py  autorole.py  chatbot.py  config.py  debug.py  economy.py  errorhandler.py  filter.py  guild_events.py  help.py  image.py  info.py  interactions.py  leveling.py  logs.py  lyrcis.py  music.py  raid.py  rough.py  sector_d.py  startup.py  tests.py
templates/: dashboard.html
