[tool.poetry]
name = "numix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord-webhook = "^0.11.0"
psutil = "^5.8.0"
pymongo = "^3.11.2"
timeago = "^1.0.15"
aiohttp = "^3.7.3"
discord = "^1.0.1"
dnspython = "^2.1.0"
PyYAML = "^5.3.1"
pynite = "^1.4.2"
Pillow = "^8.1.0"
aioconsole = "^0.3.1"
cachetools = "^4.2.0"
numpy = "^1.19.5"
better-profanity = "^0.7.0"
Flask-Discord = "^0.1.64"
tweepy = "^3.10.0"
lxml = "^4.6.2"
clashroyale = "^4.0.1"
requests = "^2.25.1"
bs4 = "^0.0.1"
brawlstars = "^0.3.1"
oauthlib = "^3.1.0"
"discord.py" = "^1.6.0"
youtube-dl = "^2020.7.28"
async-timeout = "^3.0.1"
PyNaCl = "^1.4.0"
profanityfilter = "^2.0.6"
motor = "^2.3.1"
nest-asyncio = "^1.5.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
